tdf#92271 fix VSDX char background handling

When char background is not set, we should not export white.
When char background is set, we should export that color, not black.
Unfortunately transparency is not supported in ODF.

Change-Id: I805f06c8907243576a137152ac663dba40e720fb